trunk/Archive2/76/b8f0eb8b464eea/output
main.cpp:8:15: error: invalid use of non-static member function
     decltype(f) g = f; // ?
               ^
main.cpp:8:21: error: cannot convert ‘test::f’ from type ‘void (test::)()’ to type ‘int’
     decltype(f) g = f; // ?
                     ^
