trunk/Archive2/76/b8f0eb8b464eea/main.cpp
#include <iostream>

struct test {
    void f() {
        std::cout << "f\n";
    }

    decltype(f) g = f; // ?
};

int main() {
    test x;
    x.f();
}
